# MICA

./: README.md  readme.txt  todolist.txt
Common/: IO_type.cxx  IO_type.h  argumentsParse.cxx  argumentsParse.h  toolBase.cxx  toolBase.h  unaryImageFunctor.h
Common/old/: IO_typeold.cxx  IO_typeold.h
ITK_VTK-3D/source/: CMakeLists.txt  CreateWindowsBatchScript.cmake  StartVS.bat.in  main.cpp
Qt/3Drender/src/: CMakeLists.txt  CMakeLists.txt.user.2.5pre1  Viewer.cxx  Viewer.h  Viewer.ui
Qt/DicomTags/: dicom.sqlite
Qt/DicomTags/src/: CMakeLists.txt  connection.h  dicomTags.cxx  dicomTags.h  dicomTags.ui  main.cxx  tempSql.cxx  tempSql.h  tools.h
Qt/PanelViewer/src/: CMakeLists.txt  Viewer.ui  main.cxx  panelViewer.cxx  panelViewer.cxx.autosave  panelViewer.h  panelViewer.ui
Qt/PanelViewer/src/Icons/: icons.qrc
Qt/RegionGrowing/src/: CMakeLists.txt  Viewer.cxx  Viewer.h  main.cxx  viewer.ui
Reg/Common/: RegistrationBase.cxx  RegistrationBase.h  commandIterationUpdate.h  enumerationType.h  readFromFile.cxx  readFromFile.h  readGlobal.cxx  readGlobal.h  readStages.cxx  readStages.cxx.autosave  readStages.h  registrationInterfaceCommand.h
Reg/demon/src/: CMakeLists.txt  demonReg.cxx  demonReg.h  iterationUpdate.cxx  iterationUpdate.h  main.cxx  readPar.cxx  readPar.h
Reg/multiaffine/: new.txt
Reg/multiaffine/src/: CMakeLists.txt  affineMultiReg.cxx  affineMultiReg.h  main.cxx
Reg/multibspline/: new.txt
Reg/multibspline/src/: CMakeLists.txt  bsplineMultiReg.cxx  bsplineMultiReg.h  main.cxx
Reg/multirigid/: new.txt
Reg/multirigid/src/: CMakeLists.txt  main.cxx  rigidMultiReg.cxx  rigidMultiReg.h
addImage/src/: CMakeLists.txt  addImage.cxx  addImage.h  addImage.txx
addScalar/old/: addScalar.h  addScalar.txx
addScalar/old/old/: IO_format.cxx  IO_format.h
addScalar/source/: CMakeLists.txt  addScalar.cxx  addScalar.h
addScalar/source/old/: IO_type.cxx  IO_type.h
addScalar/src/: CMakeLists.txt  addScalar.cxx  addScalar.h
addSlice/src/: CMakeLists.txt  addSlice.cxx  addSlice.h  addSlice.txx
blankImage/src/: CMakeLists.txt  blankImage.cxx  blankImage.h  blankImage.txx
castImage/src/: CMakeLists.txt  castImage.cxx  castImage.h  castImage.txx
castImage/src/old/: IO_type.cxx
centroid/src/: CMakeLists.txt  centroid.cxx  centroid.h  centroid.txx
centroid/src/old/: IO_type.cxx  IO_type.h
changeOrientaion/src/: CMakeLists.txt  changeOrientation.cxx  changeOrientation.h  changeOrientation.txx
clipIntensity/src/: CMakeLists.txt  clipIntensity.cxx  clipIntensity.h  clipIntensity.txx
computeBoundingbox/src/: CMakeLists.txt  computeBoundingbox.cxx  computeBoundingbox.h  computeBoundingbox.txx
concatenateStack/src/: CMakeLists.txt  concatenateStack.cxx  concatenateStack.h  concatenateStack.txx
convertImage/src/: CMakeLists.txt  convertImage.cxx  convertImage.h  convertImage.txx
convertImage/src/old/: IO_type.cxx  IO_type.h
countPixel/src/: CMakeLists.txt  countPixel.cxx  countPixel.h  countPixel.txx
createBox/src/: CMakeLists.txt  createBox.cxx  createBox.h  createBox.txx
createCylinder/src/: CMakeLists.txt  createCylinder.cxx  createCylinder.h  createCylinder.txx
createEllipsoid/src/: CMakeLists.txt  createEllipsoid.cxx  createEllipsoid.h  createEllipsoid.txx
createSphere/src/: CMakeLists.txt  createSphere.cxx  createSphere.h  createSphere.txx
cropImage/src/: CMakeLists.txt  cropImage.cxx  cropImage.h  cropImage.txx
dice/src/: CMakeLists.txt  dice.cxx  dice.h  dice.txx
dice/src/old/: IO_type.cxx
dicomHeader/src/: CMakeLists.txt  dicomHeader.cxx  dicomHeader.h  main.cxx
dicomToimg/src/: CMakeLists.txt  dicomToimg.cxx
dicomTomha/src/: CMakeLists.txt  dicomTomha.cxx
extractImage/src/: CMakeLists.txt  extractImage.cxx  extractImage.h  extractImage.txx
getImageInformation/src/: CMakeLists.txt  getInfo.cxx
hdrtomha/src/: CMakeLists.txt  hdrTomha.cxx
imHeader/src/: CMakeLists.txt  imHeader.cxx
imTomha/src/: CMakeLists.txt  imTomha.cxx
imgTodicom/src/: CMakeLists.txt  imgTodicom.cxx
invertIntensity/src/: CMakeLists.txt  invertIntensity.cxx  invertIntensity.h  invertIntensity.txx
makeStack/images/: 1.mha  2.mha  3.mha  4.mha  5.mha  o.mha
makeStack/src/: CMakeLists.txt  makeStack.cxx  makeStack.h  makeStack.txx
matlab/: readim.m  writeim.m
metaHeader/src/: CMakeLists.txt  metaHeader.c
metaHeader/srcv1/: CMakeLists.txt  metaHeader.cxx
mhaTohdr/src/: CMakeLists.txt  mhaTohdr.cxx
mhaToim/src/: CMakeLists.txt  mhaToim.cxx
mhaToraw/src/: CMakeLists.txt  mhaToraw.cxx
multiplyImage/src/: CMakeLists.txt  multiplyImage.cxx  multiplyImage.h  multiplyImage.txx
multiplyImage/src/old/: IO_type.cxx  IO_type.h
multiplyScalar/src/: CMakeLists.txt  multiplyScalar.cxx  multiplyScalar.h  multiplyScalar.txx
multiplyScalar/src/old/: CMakeLists.txt  multiplyScalar.cxx  multiplyScalar.h  multiplyScalar.txx
orientImage/src/: CMakeLists.txt  orientImage.cxx  orientImage.h  orientImage.txx
permuteAxes/src/: CMakeLists.txt  permuteAxes.cxx  permuteAxes.h  permuteAxes.txx
rawTomha/src/: CMakeLists.txt  rawTomha.cxx
replaceIntensity/src/: CMakeLists.txt  replaceIntensity.cxx  replaceIntensity.cxx.autosave  replaceIntensity.h  replaceIntensity.txx
resampleImage/src/: CMakeLists.txt  resampleImage.cxx  resampleImage.h  resampleImage.txx
rescaleImage/src/: CMakeLists.txt  rescaleImage.cxx  rescaleImage.h  rescaleImage.txx
rescaleImage/src/old/: IO_type.cxx  IO_type.h
reshape/src/: CMakeLists.txt  reshapeImage.cxx  reshapeImage.h  reshapeImage.txx
resizeImage/src/: CMakeLists.txt  resizeImage.cxx  resizeImage.h  resizeImage.txx
shellscripts/: t.sh
shiftOrigin/src/: CMakeLists.txt  shiftOrigin.cxx  shiftOrigin.h  shiftOrigin.txx
statistics/src/: CMakeLists.txt  statistics.cxx  statistics.h  statistics.txx
subStack/src/: CMakeLists.txt  subStack.cxx  subStack.h  subStack.txx
